formatting for the EXRAIL doco

--- a/docs/news/posts/20241118.rst
+++ b/docs/news/posts/20241118.rst
@@ -34,9 +34,9 @@ Just check out this list of features and enhancements added since our last relea
 New |EX-R| specific commands and enhancements:
 
 - Various new ROUTE related commands - See :ref:`ex-rail/ex-rail-command-reference:scripts/sequences - types and control`
-- :ref:`ex-rail/ex-rail-command-reference:jmri_sensor(vpin [,count]) - creates <s> type sensors visible to jmri`
-- Blinking/flashing vpin and amber signal - :ref:`ex-rail/ex-rail-command-reference:blink( pin, onms, offms ) - blink an output pin`
-- New :ref:`ex-rail/ex-rail-command-reference:onbutton( vpin ) - event handler for debounced button presses` and :ref:`ex-rail/ex-rail-command-reference:onsensor( sensor_id ) - event handler for sensors`
+- **JMRI_SENSOR(vpin [,count])** - creates <s> type sensors visible to jmri
+- Blinking/flashing vpin and amber signal - **BLINK( pin, onms, offms )** - blink an output pin
+- New **ONBUTTON( vpin )** - event handler for debounced button presses and **ONSENSOR( sensor_id )** - event handler for sensors
 
 - Compile time checks for:
    - duplicate or missing automation/route IDs
